Fixed responsive layout issue on cta container.

--- a/src/stylesheets/containers.scss
+++ b/src/stylesheets/containers.scss
@@ -134,12 +134,12 @@ hr {
 	}
 
 	.copy-box {
-		padding: 0px;
 		margin-bottom: 30px;
 	}
 
 	.cta-box {
 		padding: 0px;
+		text-align: center;
 	}
 
 	h3 {
